<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>LibGdx-Core</artifactId>
    <parent>
        <groupId>aphos</groupId>
        <artifactId>aphos-parent</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <version>1.0</version>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>15</source>
                    <target>15</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <properties>
        <maven.compiler.source>15</maven.compiler.source>
        <maven.compiler.target>15</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>aphos</groupId>
            <artifactId>core-engine</artifactId>
            <version>1.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>aphos</groupId>
            <artifactId>Eidolon-Core</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>eidolons</groupId>-->
<!--            <artifactId>Netherflame-Arena</artifactId>-->
<!--            <version>1.0-SNAPSHOT</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>eidolons</groupId>-->
<!--            <artifactId>Netherflame-Campaign</artifactId>-->
<!--            <version>1.0-SNAPSHOT</version>-->
<!--        </dependency>-->



        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-backend-lwjgl</artifactId>
            <version>1.9.7</version>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-ai</artifactId>
            <version>1.8.1</version>
        </dependency>

        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-box2d</artifactId>
            <version>${libgdx.version}</version>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>com.badlogicgames.gdx</groupId>-->
<!--            <artifactId>gdx-box2d-platform</artifactId>-->
<!--            <classifier>natives-desktop</classifier>-->
<!--            <version>${libgdx.version}</version>-->
<!--            <scope>compile</scope>-->
<!--        </dependency>-->

        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-tools</artifactId>
            <version>${libgdx.version}</version>
        </dependency>

        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-freetype-platform</artifactId>
            <classifier>natives-desktop</classifier>
            <version>${libgdx.version}</version>
        </dependency>

        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-platform</artifactId>
            <classifier>natives-desktop</classifier>
            <version>${libgdx.version}</version>
        </dependency>

        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-freetype</artifactId>
            <version>${libgdx.version}</version>
        </dependency>

        <dependency>
            <groupId>com.kotcrab.vis</groupId>
            <artifactId>vis-ui</artifactId>
            <version>1.4.0</version>
        </dependency>

        <dependency>
            <groupId>es.e-ucm.com.badlogicgames.gdx</groupId>
            <artifactId>gdx-video</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>es.e-ucm.com.badlogicgames.gdx</groupId>
            <artifactId>gdx-video-desktop</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.github.tommyettinger/colorful -->
        <dependency>
            <groupId>com.github.tommyettinger</groupId>
            <artifactId>colorful</artifactId>
            <version>0.2.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.github.tommyettinger/libgdx-utils -->
        <dependency>
            <groupId>com.github.tommyettinger</groupId>
            <artifactId>libgdx-utils</artifactId>
            <version>0.13.6</version>
        </dependency>
    </dependencies>
    <profiles>
        <profile>
            <id>dev</id>
            <properties>
                <prj.build.type>dev</prj.build.type>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>exec-maven-plugin</artifactId>
                        <groupId>org.codehaus.mojo</groupId>
                        <executions>
                            <execution>
                                <id>symlink for res</id>
                                <phase>compile</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>${basedir}/ln.cmd</executable>
                                </configuration>
                            </execution>
                            <execution>
                                <id>clean symlink for res</id>
                                <phase>pre-clean</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>${basedir}/rm_symlinks.cmd</executable>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>